# g2chip

./: CMakeLists.txt  README.md
docs/: chip-8-instruction-set.md
examples/: CMakeLists.txt
examples/interactive/: CMakeLists.txt  main.c
src/: CMakeLists.txt  g2chip.c  g2chip.h
